2007-10-30 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/rucola_support/controllers/rc_window_controller.rb,
	  lib/rucola/rucola_support/rc_app.rb,
	  test/test_rc_app.rb:

	Added Rucola::RCApp#views_path and updated RCWindowController
	to use that new method instead of RUBYCOCOA_ROOT.

2007-10-30 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/rucola_support.rb,
	  lib/rucola/rucola_support/controllers/rc_controller.rb,
	  lib/rucola/rucola_support/rc_app.rb,
	  test/test_helper.rb,
	  test/test_objc_core_ext.rb,
	  test/test_rc_app.rb:

	- Added module Rucola::RCApp which provides shortcut methods:
	  #root_path, #controllers_path, #models_path, #assets_path.
	- Mixin Rucola::RCApp by default in Rucola::RCController.

2007-10-29 Justin Palmer <justin@activereload.net>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  app_generators/rucola/templates/misc/English.lproj/MainMenu.nib/classes.nib,
	  app_generators/rucola/templates/misc/English.lproj/MainMenu.nib/info.nib,
	  app_generators/rucola/templates/misc/English.lproj/MainMenu.nib/keyedobjects.nib,
	  test/fixtures/MainMenu.nib/classes.nib,
	  test/fixtures/MainMenu.nib/info.nib,
	  test/fixtures/MainMenu.nib/keyedobjects.nib:

	Update application_controller and tests to use snake case instead 
	of camel case for default outlet.


2007-10-29 Justin Palmer <justin@activereload.net>

	* app_generators/rucola/templates/config/ib_external_class_defs.yml,
	  lib/rucola/tasks/interface_builder.rake:

	Change ib_external_class_defs.yml to structure classes by hierarchy and 
	allow nesting.


2007-10-29 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  app_generators/rucola/rucola_generator.rb,
	  app_generators/rucola/templates/Rakefile.erb,
	  app_generators/rucola/templates/config/ib_external_class_defs.yml,
	  app_generators/rucola/templates/misc/nibtool_helper.rb,
	  lib/rucola/tasks,
	  lib/rucola/tasks/freeze.rake,