@@ -1,4 +1,4 @@
-require File.join(File.dirname(__FILE__), "test_generator_helper.rb")
+require File.dirname(__FILE__) + '/test_helper.rb'
 
 class FooBarController < Rucola::RCWindowController; end
 
